Small improvements and added syntax highlighting to code block

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/package": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^4.0.0",
+    "@types/prismjs": "^1.26.5",
     "eslint": "^9.0.0",
     "publint": "^0.2.0",
     "svelte": "^5.0.0",
@@ -71,5 +72,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/dgarfias/svelte-garden"
+  },
+  "dependencies": {
+    "prismjs": "^1.30.0"
   }
 }
